# api/routes/users.routes.js
@@ -1,0 +1,12 @@
+const express = require('express');
+const router = express.Router();
+const usersController = require('../controllers/users.controllers');
+
+// CRUD routes for Users
+router.get('/', usersController.getAllUsers);
+router.get('/:id', usersController.getUserById);
+router.post('/', usersController.createUser);
+router.put('/:id', usersController.updateUser);
+router.delete('/:id', usersController.deleteUser);
+
+module.exports = router;
